--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <h1 class="w3-center w3-jumbo w3-text-white protest-strike-regular" style="margin-bottom:48px">Services</h1>
     <p>Chesnut Land Surveying primarily provides boundary surveys and property line staking.</p>
     <!---<p>At this time we do not provide subdividing or construction layout services. -->
-    <p><small>We predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
+    <br>
+    <hr>
+    <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
          
   <p> A boundary survey is more than just measuring property lines and marking corners. It involves 
     <ul role="list">
@@ -195,6 +197,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     accuracy and compliance with professional standards, ensuring long-term peace of mind.
   </p>
    <br>
+   <hr>
     <p class="w3-text-white">Possible scenarios I can help with:</p>
     <ul role="list">
       <li role="listitem" style="margin-left:20px">Where are my property corners or property lines?</li>
@@ -211,14 +214,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Contact -->
 <div class="w3-container w3-padding-48 w3-light-green w3-grayscale w3-xlarge" id="contact">
   <div class="w3-content">
-    <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:64px">Contact</h1>
+    <h1 class="w3-center w3-jumbo protest-strike-regular" style="margin-bottom:48px">Contact</h1>
     <!--
     <p>Thank you for your interest! At this time, I am no longer offering free quotes. 
       I will begin offering them again once I am able to commit to more projects (late September). 
       My lead time for field work is 4-6 weeks from the time I receive a signed Service Agreement.</em></p>
      -->
-    <p>Thank you for contacting <em>Chesnut Land Surveying!</em></p>
-    <p>Fill out the form below for a free quote!</p>
+    <p>Thank you for contacting Chesnut Land Surveying! Fill out the form below for a free quote!</p>
 
     <p><small>We predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
