--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p>Chesnut Land Surveying primarily provides boundary surveys and property line staking.</p>
     <!---<p>At this time we do not provide subdividing or construction layout services. -->
     <br>
-    <hr>
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
+    <hr>
          
   <p> A boundary survey is more than just measuring property lines and marking corners. It involves 
     <ul role="list">
@@ -222,9 +222,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
      -->
     <p>Thank you for contacting Chesnut Land Surveying! Fill out the form below for a free quote!</p>
 
-    <p><small>We predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
+    <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
     <p>I am currently scheduling new jobs' field work 4-6 weeks away from receiving a signed agreement.</p>
+    <br>
     <p><small><small>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</small></small></p>
 
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
