--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       I will begin offering them again once I am able to commit to more projects (late September). 
       My lead time for field work is 4-6 weeks from the time I receive a signed Service Agreement.</em></p>
      -->
-    <p>Thank you for contacting Chesnut Land Surveying! Fill out the form below for a free quote!</p>
+    <p>Fill out the form below for a free quote!</p>
 
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
-    <p>I am currently scheduling new jobs' field work 4-6 weeks away from receiving a signed agreement.</p>
+    <p>I am currently scheduling new jobs' field work 3-6 weeks away from receiving a signed Service Agreement.</p>
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
@@ -253,7 +253,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
         <label for="boundary">Boundary Survey</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
-        <label for="linestaking">Line Staking <small></small>(wooden stakes will be placed along the boundary lines)</small></label><br>
+        <label for="linestaking">Line Staking <small></small><small></small>(wooden stakes will be placed along the boundary lines)</small></small></label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
         <label for="site_plan">Site Plan</label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
@@ -269,7 +269,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <p>
         <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
       </p>
-      <p><small></small>After submitting the request, a new tab should pop up with a confirmation.</small></p>
+      <p><small><small>After submitting the request, a new tab should pop up with a confirmation.</small></small></p>
       <p><small><small>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</small></small></p>
       <input name="subject" type="hidden" value="New submission from {{ name }}" />
     </form>
