--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
-    <p>I am currently scheduling new jobs' field work 3-6 weeks away from receiving a signed Service Agreement.</p>
+    <p>I am currently scheduling new jobs' field work 4-6 weeks away from receiving a signed Service Agreement. This will most likely put the job and/or deliverables into the new year.</p>
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
