--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
         <label for="boundary">Boundary Survey</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
-        <label for="linestaking">Line Staking <small></small><small>(wooden stakes will be placed along the boundary lines)</small></small></label><br>
+        <label for="linestaking">Line Staking <small></small><small>(This is an add-on to a Boundary Survey where wooden stakes will be placed along the boundary lines)</small></small></label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
         <label for="site_plan">Site Plan</label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
