--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
     <p>I typically schedule new jobs' field work within 4 weeks from receiving a signed Service Agreement.</p>
+    <p>Please note responses could take up to a week after submitting a quote request, depending on the volume of current jobs.</p>
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
@@ -250,6 +251,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </p>
       <p>
         <label for="surveys">Type of Services (Select all that apply)</label><br>
+        <label for="surveys"><strong>All services come with a Survey Map.</strong></label><br>
         <input type="checkbox" id="boundary" name="surveys" value="Boundary">
         <label for="boundary">Boundary Survey</label><br>
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
@@ -267,7 +269,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <textarea id="message" class="w3-input w3-padding-16 w3-border" placeholder="Additional details about your request" name="message"></textarea>
       </p>
       <p>
-        <p><small><small>Please note responses could take a few days after submitting a quote request, depending on the volume of current jobs.</small></small></p>
+        <p><small><small>Please note responses could take up to a week after submitting a quote request, depending on the volume of current jobs.</small></small></p>
         <button class="w3-button w3-light-grey w3-block" type="submit">SEND MESSAGE</button>
       </p>
       <p><small><small>After submitting the request, a new tab should pop up with a confirmation.</small></small></p>
