--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
-    <p>I typically schedule new jobs' field work within 4 weeks from receiving a signed Service Agreement.</p>
-    <p>Please note responses could take up to a week after submitting a quote request, depending on the volume of current jobs.</p>
+    <!--<p>I typically schedule new jobs' field work within 4 weeks from receiving a signed Service Agreement.</p>-->
+    <p><strong>I am currently booked through April. However, I’d be happy to provide quotes for any projects that can start in April or later.</strong></p>
+    <p>Please note responses could take up to a week or two after submitting a quote request, depending on the volume of current jobs.</p>
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
     <form action="https://formspree.io/f/mdoqgwkj" method="POST" enctype="multipart/form-data" target="_blank">
