--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <p><small>I predominantly serve the following counties/areas: Cheatham, Davidson, Dickson, Maury, Robertson, Rutherford, Sumner, Williamson, and Wilson.</small></p>
            
     <!--<p>I typically schedule new jobs' field work within 4 weeks from receiving a signed Service Agreement.</p>-->
-    <p><strong>I am currently booked through April. However, I’d be happy to provide quotes for any projects that can start in April or later.</strong></p>
+    <p><strong>I am currently booked through April. However, I’d be happy to provide quotes for any projects that can start in late April or May</strong></p>
     <p>Please note responses could take up to a week or two after submitting a quote request, depending on the volume of current jobs.</p>
     <!--<br>Please include the address of the property and what you are looking to have done. I will get back to you as soon as possible.-->
 
@@ -258,7 +258,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <input type="checkbox" id="linestaking" name="surveys" value="PLS">
         <label for="linestaking">Line Staking <small></small><small>(This is an add-on to a Boundary Survey where wooden stakes will be placed along the boundary lines)</small></small></label><br>
         <input type="checkbox" id="site_plan" name="surveys" value="Site Plan">
-        <label for="site_plan">Site Plan</label><br>
+        <label for="site_plan">Site Plan<small></small><small>For site plans, requirements vary depending on zoning regulations—some may need building footprints, topography, or even engineering work. To avoid delays, we recommend checking with zoninghelpdesk@nashville.gov before requesting a survey to ensure you know exactly what’s required for your project.</small></small></label><br>
         <input type="checkbox" id="soil_test" name="surveys" value="Soil Test">
         <label for="soil_test">Soil Grid Map</label><br>
         <input type="checkbox" id="topographic" name="surveys" value="Topographic">
