Updated landing page layout

--- a/index.html
+++ b/index.html
@@ -980,8 +980,8 @@
   <!-- Hero Section -->
   <section class="hero" id="home">
     <div class="container hero-content">
-      <img src="/w3images/chesnutlandsurveying_websiteLogo.jpg" alt="Chesnut Land Surveying LLC Logo" style="width: 250px; height: auto; margin-bottom: 30px;">
-      <p>Professional, accurate, and reliable land surveying services across Nashville and Middle Tennessee.</p>
+      <h1>Professional Land Surveying Services</h1>
+      <p>Chesnut Land Surveying LLC provides accurate, reliable, and professional surveying services across Nashville and Middle Tennessee.</p>
       <div>
         <a href="#contact" class="btn btn-primary">Request a Quote</a>
         <a href="#services" class="btn btn-outline">My Services</a>
