--- a/index.html
+++ b/index.html
@@ -1400,7 +1400,7 @@
       </div>
       
       <div class="footer-bottom">
-        <p>&copy; 2024 Chesnut Land Surveying LLC. All rights reserved. | RLS #3378 | <a href="#">Privacy Policy</a></p>
+        <p>&copy; 2024 Chesnut Land Surveying LLC. All rights reserved. | RLS #3378 </p>
       </div>
     </div>
   </footer>
