--- a/index.html
+++ b/index.html
@@ -953,29 +953,7 @@
   <header>
     <div class="container header-container">
       <a href="#" class="logo">
-        <div style="width: 90px; height: 90px; margin-right: 15px; overflow: hidden; display: flex; align-items: center; justify-content: center;">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000" style="width: 100%; height: 100%;">
-            <circle cx="500" cy="450" r="400" fill="#003A5D"/>
-            <path d="M300 450 L400 250 L600 250 L700 450" fill="none" stroke="#003A5D" stroke-width="15"/>
-            <path d="M480 450 L590 200 L670 450" fill="none" stroke="#003A5D" stroke-width="15"/>
-            <path d="M150 800 Q500 750 850 800" fill="#5C7B1E"/>
-            <g transform="translate(475, 280) scale(0.6)">
-              <path d="M40 50 L40 350 M-80 350 L160 350 M-40 50 L120 50" stroke="#FFFFFF" stroke-width="20" fill="none"/>
-              <path d="M0 50 L0 350" stroke="#FFFFFF" stroke-width="30" fill="none"/>
-              <rect x="-60" y="100" width="120" height="150" fill="#003A5D" stroke="#FFFFFF" stroke-width="10"/>
-              <circle cx="0" cy="175" r="35" fill="#FFFFFF"/>
-              <circle cx="0" cy="175" r="20" fill="none" stroke="#FFFFFF" stroke-width="5"/>
-              <g transform="translate(0, 280)">
-                <circle cx="-30" cy="0" r="8" fill="#FFFFFF"/>
-                <circle cx="0" cy="0" r="8" fill="#FFFFFF"/>
-                <circle cx="30" cy="0" r="8" fill="#FFFFFF"/>
-                <circle cx="-30" cy="25" r="8" fill="#FFFFFF"/>
-                <circle cx="0" cy="25" r="8" fill="#FFFFFF"/>
-                <circle cx="30" cy="25" r="8" fill="#FFFFFF"/>
-              </g>
-            </g>
-          </svg>
-        </div>
+        <img src="/w3images/chesnutlandsurveying_logo.jpg" alt="Chesnut Land Surveying Logo">
         <div class="logo-text">
           <span class="logo-title">Chesnut</span>
           <span class="logo-subtitle">Land Surveying LLC</span>
