--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     .logo img {
       height: 60px;
       margin-right: 10px;
-      border-radius: 75%;
+      /*border-radius: 75%;*/
     }
     
     .logo-text {
@@ -734,7 +734,7 @@
     .footer-logo img {
       width: 60px;
       height: 60px;
-      border-radius: 75%;
+      /*border-radius: 75%;*/
       margin-right: 15px;
     }
     
