--- a/index.html
+++ b/index.html
@@ -1320,21 +1320,21 @@
   </section>
   
   <!-- Footer -->
+  <!-- Footer -->
   <footer>
     <div class="container">
       <div class="footer-container">
         <div class="footer-about">
           <div class="footer-logo">
             <img src="/w3images/chesnutlandsurveyingLLC_logo.jpg" alt="Chesnut Land Surveying Logo">
-            </div>
-            <div>
-              <h3 style="margin: 0;">Chesnut Land Surveying LLC</h3>
-            </div>
+          </div>
+          <div>
+            <h3 style="margin: 0;">Chesnut Land Surveying LLC</h3>
           </div>
           <p>Professional land surveying services in Nashville and Middle Tennessee. Providing boundary surveys, property line staking, and more with precision and reliability. Chesnut Land Surveying LLC is a woman-owned business established to serve your land surveying needs.</p>
         </div>
         
-                  <div class="footer-links">
+        <div class="footer-links">
           <h3 class="footer-heading">Quick Links</h3>
           <ul>
             <li><a href="#home"><i class="fas fa-chevron-right"></i> Home</a></li>
@@ -1354,6 +1354,7 @@
             <li><a href="https://www.linkedin.com/in/susanchesnut/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
           </ul>
         </div>
+
       </div>
       
       <div class="footer-bottom">
