--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,7 @@
           </div>
           
           <div class="availability-note">
-            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through April. However, I'd be happy to provide quotes for any projects that can start in late April or May.
+            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through April. However, I'd be happy to provide quotes for any projects that can start in May or later.
           </div>
         </div>
         
