--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
           </div>
           
           <div class="availability-note">
-            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through April. However, I'd be happy to provide quotes for any projects that can start in May or later.
+            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through April. However, I'd be happy to provide quotes for any projects that can start in mid-May or later.
           </div>
         </div>
         
