Update wording for one FAQ

--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,13 @@
             <i class="fas fa-chevron-down"></i>
           </div>
           <div class="faq-answer">
-            <p>I generally need to verify the overall boundary before staking a single line, to make sure it’s correct. That said, if you have a specific concern (like a fence or driveway near a line), let me know - I’ll do my best to prioritize that area during the survey.</p>
+            <p>In most cases, I need to verify the entire boundary before staking even a single line. Property lines relate to each other, and errors in one part can affect another. Even if you're only concerned with one side, I still need to:</p>
+                <ul>
+                  <li>Research and analyze the full deed description</li>
+                  <li>Locate or confirm corners on all sides</li>
+                  <li>Cross-check measurements to make sure everything fits</li>
+                </ul>
+                <p>I can prioritize the area you’re most concerned about (like a fence or driveway), but I still need to survey the full boundary to do it accurately. That’s why pricing reflects a complete boundary survey—not just one line.</p>
           </div>
         </div>
         
