--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,8 @@
                   <li>Locate or confirm corners on all sides</li>
                   <li>Cross-check measurements to make sure everything fits</li>
                 </ul>
-                <p>I can prioritize the area you’re most concerned about (like a fence or driveway), but I still need to survey the full boundary to do it accurately. That’s why pricing reflects a complete boundary survey—not just one line.</p>
+                <br> <!-- Line break added here -->
+                <p>I can prioritize the area you’re most concerned about (like a fence or driveway), but I still need to survey the full boundary to do it accurately. That’s why pricing reflects a complete boundary survey - not just one line.</p>
           </div>
         </div>
         
