--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,7 @@
           </div>
           
           <div class="availability-note">
-            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through May However, I'd be happy to provide quotes for any projects that can start in June or later.
+            <i class="fas fa-info-circle"></i> <strong>Note:</strong> I am currently booked through May. However, I'd be happy to provide quotes for any projects that can start in June or later.
           </div>
         </div>
         
