--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@
           <div class="availability-note">
             <i class="fas fa-info-circle"></i> <strong>Note:</strong> Due to current workload, it may take up to a month for me to provide a quote. 
             Once a project is scheduled, I typically complete it within a month. Quotes are valid for 30 days.
-            <p>To help me get back to you as efficiently as possible, please submit a quote request through my website 
+            <br><p>To help me get back to you as efficiently as possible, please submit a quote request through my website 
               — there's no need to follow up by email or phone. Submitting multiple ways can actually slow things down. Thank you for your patience!
             </p>
           </div>
