--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
             <div class="info-item">
               <i class="fas fa-envelope"></i>
               <div>
-                <p><a href="mailto:chesnutsurveying@gmail.com" style="color: var(--primary);">chesnutsurveying@gmail.com</a></p>
+                <p><a href="mailto:susan@chesnutsurveying.com" style="color: var(--primary);">susan@chesnutsurveying.com</a></p>
               </div>
             </div>
             <div class="info-item">
@@ -1283,7 +1283,7 @@
             <i class="fas fa-envelope"></i>
             <div class="contact-detail-content">
               <h4>Email</h4>
-              <p><a href="mailto:chesnutsurveying@gmail.com">chesnutsurveying@gmail.com</a></p>
+              <p><a href="mailto:susan@chesnutsurveying.com">susan@chesnutsurveying.com</a></p>
             </div>
           </div>
           
@@ -1447,7 +1447,7 @@
         <div class="footer-links">
           <h3 class="footer-heading">Connect With Me</h3>
           <ul>
-            <li><a href="mailto:chesnutsurveying@gmail.com"><i class="fas fa-envelope"></i> chesnutsurveying@gmail.com</a></li>
+            <li><a href="mailto:susan@chesnutsurveying.com"><i class="fas fa-envelope"></i> susan@chesnutsurveying.com</a></li>
             <li><a href="https://www.facebook.com/chesnutsurveying/" target="_blank"><i class="fab fa-facebook-f"></i> Facebook</a></li>
             <li><a href="https://www.linkedin.com/in/susanchesnut/" target="_blank"><i class="fab fa-linkedin-in"></i> LinkedIn</a></li>
           </ul>
