--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
   <!-- Use "accepting-work" to show normal contact form -->
   <!-- Like this: <body class="not-accepting-work"> -->
   <!-- Use "not-accepting-work" to show notification -->
-<body class="not-accepting-work">
+<body class="accepting-work">
 
 
   <!-- Schema Markup for Local Business -->
@@ -1822,3 +1822,4 @@ body:not(.not-accepting-work) .not-accepting-contact {
 </script>
 </body>
 </html>
+
