not accepting jobs again

--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
   <!-- Use "accepting-work" to show normal contact form -->
   <!-- Like this: <body class="not-accepting-work"> -->
   <!-- Use "not-accepting-work" to show notification -->
-<body class="accepting-work">
+<body class="not-accepting-work">
 
 
   <!-- Schema Markup for Local Business -->
@@ -1514,7 +1514,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
           
           <div class="return-date">
             <i class="fas fa-calendar-alt"></i>
-            I plan to resume accepting new work in <strong>October 2025</strong>
+            Please check back later to see when I’ll be accepting new projects again.
           </div>
           
           <p>I appreciate your understanding and patience. Please check back in October.</p>
@@ -1822,4 +1822,5 @@ body:not(.not-accepting-work) .not-accepting-contact {
 </script>
 </body>
 </html>
+
 
