--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
   <!-- Use "accepting-work" to show normal contact form -->
   <!-- Like this: <body class="not-accepting-work"> -->
   <!-- Use "not-accepting-work" to show notification -->
-<body class="not-accepting-work">
+<body class="accepting-work">
 
 
   <!-- Schema Markup for Local Business -->
@@ -1137,7 +1137,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
           </div>
           <div class="service-content">
             <h3>Boundary Surveys</h3>
-            <p>My comprehensive boundary surveys include thorough research of historical records, careful verification of boundaries, 
+            <p>My comprehensive boundary retracement surveys include thorough research of historical records, careful verification of boundaries, 
               and precise measurements using professional-grade equipment. Each survey comes with a detailed map that clearly defines your property lines.</p>
             <a href="#contact" class="btn btn-primary">Request Quote</a>
           </div>
@@ -1815,6 +1815,7 @@ body:not(.not-accepting-work) .not-accepting-contact {
 </script>
 </body>
 </html>
+
 
 
 
