--- a/index.html
+++ b/index.html
@@ -1388,13 +1388,9 @@ body:not(.not-accepting-work) .not-accepting-contact {
           </div>
           
           <div class="availability-note">
-            <i class="fas fa-info-circle"></i> <strong>Note:</strong> Due to current workload, it may take up to a month for me to provide a quote. 
-            Once a project is scheduled, I typically complete it within a month. Quotes are valid for 30 days.
+            <i class="fas fa-info-circle"></i> <strong>Note:</strong> Now booking for late January and February! I’m taking a brief break to recharge, 
+            so please expect a response to your inquiry when I return in early January.
             <br>
-            <br>
-            <p>To help me get back to you as efficiently as possible, please submit a quote request through my website 
-              — there's no need to follow up by email or phone. Submitting multiple ways can actually slow things down. Thank you for your patience!
-            </p>
           </div>
         </div>
 
@@ -1893,3 +1889,4 @@ body:not(.not-accepting-work) .not-accepting-contact {
 </script>
 </body>
 </html>
+
