--- a/index.html
+++ b/index.html
@@ -1388,8 +1388,8 @@ body:not(.not-accepting-work) .not-accepting-contact {
           </div>
           
           <div class="availability-note">
-            <i class="fas fa-info-circle"></i> <strong>Note:</strong> Now booking for late January and February! I’m taking a brief break to recharge, 
-            so please expect a response to your inquiry when I return in early January.
+            <i class="fas fa-info-circle"></i> <strong>Note:</strong> Now booking for February and March 2026! 
+            Please note that as a one-person shop, quote turnaround is currently about 4 weeks. Thank you for your patience and for supporting my small business!
             <br>
           </div>
         </div>
@@ -1889,4 +1889,5 @@ body:not(.not-accepting-work) .not-accepting-contact {
 </script>
 </body>
 </html>
+
 
